flight-scheduler/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flight-scheduler
  name: flight-scheduler
  namespace: airport-system
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: flight-scheduler
  sessionAffinity: None
  type: ClusterIP
