flight-scheduler/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: flight-scheduler
    application-system: airport-system
  name: flight-scheduler
  namespace: airport-system
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: flight-scheduler
    weight: 100
